# desafio-looqbox

./: Makefile  README  README.md  pyproject.toml  sample.env
src/: main.py
src/entities/: __init__.py  business.py  department.py  product.py  section.py  store.py
src/enums/: __init__.py  calculation_type_enum.py  group_by_period_enum.py  product_sort_by_enum.py
src/exceptions/: __init__.py  business_not_found.py  department_not_found.py  feature_not_available.py  product_not_found.py  section_not_found.py  store_not_found.py  value_not_defined.py
src/models/: __init__.py  product_model.py  product_sale_model.py  store_model.py  store_sale_model.py
src/repositories/: __init__.py  business_repository.py  department_repository.py  product_repository.py  section_repository.py  store_repository.py
src/routers/: __init__.py  business_router.py  department_router.py  product_router.py  section_router.py  store_router.py
src/schemas/: __init__.py  business_input_schema.py  business_output_schema.py  department_output_schema.py  product_input_schema.py  product_output_schema.py  section_output_schema.py  store_input_schema.py  store_output_schema.py
src/use_cases/: __init__.py  business_use_case.py  department_use_case.py  injection.py  product_use_case.py  section_use_case.py  store_use_case.py
src/value_objects/: __init__.py  date_time.py  product_sale.py  sale.py
tests/: conftest.py
tests/use_cases/: test_business_use_case.py  test_department_use_case.py  test_product_use_case.py  test_section_use_case.py  test_store_use_case.py
(+9 files in other folders)
